--- a/index.html
+++ b/index.html
@@ -295,21 +295,22 @@
 
 <!-- overlay Card -->
 
-<div class="card text-bg-dark my-4 w-100">
+<!-- <div class="card text-bg-dark my-4 w-100 ">
     <img src="img/wallpaper2.jpg" class="card-img" alt="...">
     <div class="card-img-overlay box">
-      <h3 class="card-title my-3 p-4"> How Do You Write a Good Programmer Biography?</h3>
-      <ul>
-        <li class="card-text">Provide your name and current position within your company in the opening line</li>
-        <li class="card-text">The main body of your biography should cover some of your most important achievements, skills, and qualifications, try to keep to a maximum of 4 paragraphs and do not go into excessive detail</li>
-        <li class="card-text">The first paragraph should summarize the main body in just a few lines</li>
-        <li class="card-text">Closing lines should mention something personal about you such as membership of a college football team and a continuing passion for the sport</li>
-        <li class="card-text">Many people have neither the time nor the skill to write a biography that has the impact that it should have, far too often people put very little thought into it at all and later regret what they have written. It is far better to approach a professional profile and biography writing service that can take all of the hard work for you.</li>
-    </ul>
       <p class="card-text"><small>Last updated 3 mins ago</small></p>
     </div>
-  </div>
-
+  </div> -->
+<div class="box1" style="margin: 4vh 8vw;">
+  <h3 class="card-title my-3 p-4"> How Do You Write a Good Programmer Biography?</h3>
+  <ul>
+    <li class="card-text">Provide your name and current position within your company in the opening line</li>
+    <li class="card-text">The main body of your biography should cover some of your most important achievements, skills, and qualifications, try to keep to a maximum of 4 paragraphs and do not go into excessive detail</li>
+    <li class="card-text">The first paragraph should summarize the main body in just a few lines</li>
+    <li class="card-text">Closing lines should mention something personal about you such as membership of a college football team and a continuing passion for the sport</li>
+    <li class="card-text">Many people have neither the time nor the skill to write a biography that has the impact that it should have, far too often people put very little thought into it at all and later regret what they have written. It is far better to approach a professional profile and biography writing service that can take all of the hard work for you.</li>
+</ul>
+</div>
 <!-- Footer -->
 
 <footer class="foot">
